# unipac

./: CMakeLists.txt  README.md
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/package/: package.h
src/core/repository/: repository.h
src/dsl/: .gitignore  settings.gradle.kts
src/dsl/app/: build.gradle.kts
src/dsl/app/src/main/kotlin/io/unipac/dsl/: App.kt  TestingScripts.kt
src/dsl/app/src/main/kotlin/io/unipac/dsl/models/: UnipacConfig.kt  unipac.kt
src/dsl/app/src/main/kotlin/io/unipac/dsl/models/repository/: BasicCredentials.kt  Credentials.kt  CredentialsBuilder.kt  Repository.kt  RepositoryBuilder.kt  RepositoryGroup.kt  RepositoryImpl.kt  RepositoryMarker.kt  RepositoryType.kt  repository.kt
src/dsl/app/src/main/kotlin/io/unipac/dsl/models/universe/: Universe.kt  UniverseBuilder.kt  UniverseMarker.kt  universe.kt
